2006-05-03 nowel(S2Dao.PHP5-1.1.0-RC2)

================ S2Dao.PHP5-1.1.0-RC2 更新履歴 ===================

    * pear package に対応しました。
    * コメントアノテーションの記法をS2Dao-tiger風に変更しました。
    * E_STRICT レポートについて修正しました。
    * PROCEDURE アノテーションに対応しました。
        - 現在はMySQLのみStored Functionに対応しています。
    * PDOトランザクションの自動制御を提供しました。
    
2006-04-29 nowel(S2Dao.PHP5-1.1.0-RC2)

    * コメントアノテーションの記法をS2Dao-tigerとあわせました。
        - 詳細はドキュメントをご覧になってください。
    * E_STRICT レポートについて修正しました。
    * PROCEDURE に対応しました。
        - 現在はMySQLのみStored Functionに対応しています。

2006-04-14 nowel(S2Dao.PHP5-1.1.0-RC2)

    * pdoのトランザクション機構提供開始(alpha)
        - 詳細はドキュメントをご覧になってください。
        - examples/s2dao_selftransaction にサンプルがあるのでご覧になってください。
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_AbstractTxInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_RequiredInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_RequiresNewInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_MandatoryInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_NotSupportedInterceptor.class.php
        - add: src/s2dao.php5/org/seasar/extension/tx/S2Dao_NeverInterceptor.class.php
    * modify: pdo.dicon
    	    <!--
        <component name="requiredTx" class="S2Dao_RequiredInterceptor" />
        <component name="requiresNewTx" class="S2Dao_RequiresNewInterceptor" />
        <component name="mandatoryTx" class="S2Dao_MandatoryInterceptor" />
        <component name="notSupportedTx" class="S2Dao_NotSupportedInterceptor" />
        -->

2006-04-10 nowel(S2Dao.PHP5-1.1.0-RC1)

================ S2Dao.PHP5-1.1.0-RC1 更新履歴 ===================
    * fix: insert/update/delete 時に versionNo/loc の値が正しく設定されないバグを修正しました。
    * fix: N:1(RELNO)時のRelation Bean値が正しく設定されないバグを修正しました。
    * fix: いくつかの Exception 及びメッセージを修正しました。
    * fix: s2dao.inc.php にて S2ContainerMessageUtil の指定が間違っていたのを修正しました。
    * fix: SQLコメントが正しく利用できないバグを修正しました。