@@ -15,13 +15,13 @@
     </component>
     -->
 
-	<!--
+    <!--
     <component name="dataSource" class="S2Container_PDODataSource">
         <property name="dsn">"pgsql:host=localhost; dbname=s2con"</property>
         <property name="user">"root"</property>
         <property name="password">"pass"</property>
     </component>
-    -->
+    ->
 
     <!--
     <component name="dataSource" class="S2Container_PDODataSource">
