@@ -1,2 +1,2 @@
-SELECT EMP.*, DEPT.dname dname_0, DEPT.loc loc_0 FROM EMP, DEPT
+SELECT EMP.*, DEPT.dname as dname_0, DEPT.loc as loc_0 FROM EMP, DEPT
 WHERE EMP.empno = /*empno*/7788 AND EMP.deptno = DEPT.deptno
