@@ -1,15 +1,16 @@
-DROP TABLE IF EXISTS EMP;
-DROP TABLE IF EXISTS DEPT;
+DROP TABLE EMP;
+DROP TABLE DEPT;
 
 CREATE TABLE EMP(
-    EMPNO INTEGER(4) NOT NULL PRIMARY KEY,
+    EMPNO INTEGER NOT NULL,
     ENAME VARCHAR(10),
     JOB VARCHAR(9),
-    MGR INTEGER(4),
+    MGR INTEGER,
     HIREDATE DATE,
     SAL NUMERIC(7, 2),
     COMM NUMERIC(7, 2),
-    DEPTNO INTEGER(2)
+    DEPTNO INTEGER,
+    PRIMARY KEY(EMPNO)
 );
 
 INSERT INTO EMP VALUES (7369, 'SMITH',  'CLERK',     7902,
@@ -42,10 +43,11 @@ INSERT INTO EMP VALUES (7934, 'MILLER', 'CLERK',     7782,
         '1982-01-23', 1300, NULL, 10);
 
 CREATE TABLE DEPT(
-    DEPTNO INTEGER(2) NOT NULL PRIMARY KEY,
+    DEPTNO INTEGER NOT NULL,
     DNAME VARCHAR(14),
     LOC VARCHAR(13),
-    VERSIONNO INTEGER(8) default 0
+    VERSIONNO INTEGER default 0,
+    PRIMARY KEY(DEPTNO)
 );
 
 INSERT INTO DEPT VALUES (10, 'ACCOUNTING', 'NEW YORK', 0);
